# OOP-Task-3

./: .gitignore  CMakeLists.txt  DarbasFailais.cpp  DarbasFailais.h  IvestiesMetodai.cpp  Profiling.cpp  Profiling.h  README.md  SkaiciavimoBudai.cpp  SkaiciavimoBudai.h  kolegos.txt  kursiokai.txt  main.cpp
Task 3/: CMakeLists.txt  test.txt
Task 3/Doxygen/: _darbas_failais_8h.html  _darbas_failais_8h.js  _darbas_failais_8h_source.html  _profiling_8h.html  _profiling_8h.js  _profiling_8h_source.html  _studentas_8h.html  _studentas_8h_source.html  annotated.html  class_studentas-members.html  class_studentas.html  class_studentas.js  classes.html  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.html  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.js  dir_be18496bfc667fbf308e48ed7149901b.html  dir_be18496bfc667fbf308e48ed7149901b.js  doxygen.css  files.html  functions.html  functions_func.html  functions_rela.html  globals.html  globals_func.html  index.html  navtreedata.js  navtreeindex0.js
Task 3/Doxygen/search/: all_0.js  all_1.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  files_1.js  functions_1.js  functions_3.js  functions_4.js  functions_7.js  functions_8.js  related_0.js  search.css  searchdata.js
Task 3/headers/: DarbasFailais.h  IvestiesMetodai.h  Profiling.h  Studentas.h
Task 3/source files/: DarbasFailais.cpp  IvestiesMetodai.cpp  Profiling.cpp  SkaiciavimoBudai.cpp  Studentas.cpp  main.cpp  mainTest.cpp
